--- a/index.html
+++ b/index.html
@@ -286,16 +286,31 @@
             <form class="modal-form">
                 <label class="modal-form-field">
                     <span class="modal-form-desc">Name</span>
+                    <div class="modal-form-wrap">
                     <input type="text" name="user-name" class="modal-form-input" required />
+                <svg class="input-icon" width="18" height="18">
+                    <use href="./img/icons.svg#icon-person"></use>
+                </svg>
+            </div>
                 </label>
                 <label class="modal-form-field">
                     <span class="modal-form-desc">Phone</span>
+                    <div class="modal-form-wrap">
                     <input type="tel" name="user-phone" class="modal-form-input" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx"/>
-                </label>
+                <svg class="input-icon" width="18" height="24">
+                    <use href="./img/icons.svg#icon-phone"></use>
+                </svg>
+            </div>    
+            </label>
                 <label class="modal-form-field">
                     <span class="modal-form-desc">Email</span>
+                    <div class="modal-form-wrap">
                     <input type="email" name="user-email" class="modal-form-input" required />
-                </label>
+                <svg class="input-icon" width="18" height="24">
+                    <use href="./img/icons.svg#icon-email"></use>
+                </svg>
+            </div>    
+            </label>
                 <label class="modal-form-field"> 
                     <span class="modal-form-desc">Comment</span>
                     <textarea name="user-message" class="modal-form-message" placeholder="Text input"></textarea>
