--- a/index.html
+++ b/index.html
@@ -273,9 +273,31 @@
             </li>
         </ul>
         </div>
+        <form class="subscribe-form" action="">
+            <form role="group" aria-labelledby="subscribe">
+                <h2 class="subscribe-title" id="subscribe">Subscribe</h2>
+                <div class="subscribe-row">
+                  <label class="subscribe-field">
+                    <input
+                      class="subscribe-input"
+                      type="email"
+                      name="email"
+                      placeholder="E-mail"
+                      required
+                    />
+                  </label>
+                  <button class="subscribe-btn" type="submit">
+                    Subscribe
+                    <svg class="subscribe-icon" height="24" width="24">
+                      <use href="./images/icons.svg#Frame-3"></use>
+                    </svg>
+                  </button>
+                </div>
+              </form>
+            </form>
         </div>
     </footer>
-        <div class="backdrop " data-modal>
+        <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-close-btn" data-modal-close >
                  <svg class="modal-close-btn-icon" width="8" height="8">
@@ -285,38 +307,43 @@
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form">
                 <label class="modal-form-field">
-                    <span class="modal-form-desc">Name</span>
-                    <div class="modal-form-wrap">
+                    <p class="modal-form-desc">Name</p>
+                    <span class="modal-form-wrap">
                     <input type="text" name="user-name" class="modal-form-input" required />
                 <svg class="input-icon" width="18" height="18">
                     <use href="./img/icons.svg#icon-person"></use>
                 </svg>
-            </div>
+                </span>
                 </label>
                 <label class="modal-form-field">
-                    <span class="modal-form-desc">Phone</span>
-                    <div class="modal-form-wrap">
+                    <p class="modal-form-desc">Phone</p>
+                    <span class="modal-form-wrap">
                     <input type="tel" name="user-phone" class="modal-form-input" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx"/>
                 <svg class="input-icon" width="18" height="24">
                     <use href="./img/icons.svg#icon-phone"></use>
                 </svg>
-            </div>    
+                    </span>    
             </label>
                 <label class="modal-form-field">
-                    <span class="modal-form-desc">Email</span>
-                    <div class="modal-form-wrap">
+                    <p class="modal-form-desc">Email</p>
+                    <span class="modal-form-wrap">
                     <input type="email" name="user-email" class="modal-form-input" required />
                 <svg class="input-icon" width="18" height="24">
                     <use href="./img/icons.svg#icon-email"></use>
                 </svg>
-            </div>    
+            </span>    
             </label>
                 <label class="modal-form-field"> 
                     <span class="modal-form-desc">Comment</span>
                     <textarea name="user-message" class="modal-form-message" placeholder="Text input"></textarea>
                 </label>
-                <input id="user-policy" type="checkbox" name="user-policy" class="modal-form-check" />
-                <label for="user-policy" class="modal-form-check-desc">I accept the terms and conditions of the <a href="">Privacy Policy</a> 
+                <input id="user-policy" type="checkbox" name="user-policy" class="modal-form-check is-hidden" />
+                <label for="user-policy" class="modal-form-check-desc"
+                ><span class="check-box">
+                    <svg class="check-icon" width="10" height="8">
+                    <use href="./img/icons.svg#icon-Vector-4"></use>
+                </svg>
+                </span>&nbsp; I accept the terms and conditions of the&nbsp; <a href="" class="check-link">Privacy Policy</a> 
                 </label>
                 <button type="submit" class="modal-form-submit">Send</button>
             </form>
