--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container header-container">
         <nav class="header-navigation">
             <a href="./index.html" class="header-logo link"><span class="logo-web">WEB</span><span class="logo-studio">STUDIO</span></a>
-        <ul class="header-list list">
+        <ul class="header-nav-list list">
             <li class="header-items"><a href="./index.html" class="header-link link current">Studio</a></li>
             <li class="header-items"><a href="./portfolio.html" class="header-link link">Portfolio</a></li>
             <li class="header-items"><a href="" class="header-link link">Contacts</a></li>
@@ -273,28 +273,17 @@
             </li>
         </ul>
         </div>
-        <form class="subscribe-form" action="">
-            <form role="group" aria-labelledby="subscribe">
-                <h2 class="subscribe-title" id="subscribe">Subscribe</h2>
-                <div class="subscribe-row">
-                  <label class="subscribe-field">
-                    <input
-                      class="subscribe-input"
-                      type="email"
-                      name="email"
-                      placeholder="E-mail"
-                      required
-                    />
-                  </label>
-                  <button class="subscribe-btn" type="submit">
-                    Subscribe
-                    <svg class="subscribe-icon" height="24" width="24">
-                      <use href="./images/icons.svg#Frame-3"></use>
-                    </svg>
-                  </button>
-                </div>
-              </form>
-            </form>
+       <div class="footer-sub">
+        <h2 class="footer-sub-title">Subscribe</h2>
+        <div class="footer-sub-wrap">
+            <label class="footer-sub-field">
+                <input class="footer-sub-input" type="email" name="email" placeholder="E-mail" required/>
+            </label>
+        <button type="submit" class="footer-sub-btn">Subscribe <svg class="footer-sub-icon" width="20" height="24">
+            <use href="./img/icons.svg#icon-Frame-3"></use>
+        </svg></button>       
+    </div> 
+       </div>       
         </div>
     </footer>
         <div class="backdrop is-hidden" data-modal>
