--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             </li>
         </ul>
         </div>
-       <div class="footer-sub">
+       <form class="footer-sub">
         <h2 class="footer-sub-title">Subscribe</h2>
         <div class="footer-sub-wrap">
             <label class="footer-sub-field">
@@ -283,7 +283,7 @@
             <use href="./img/icons.svg#icon-Frame-3"></use>
         </svg></button>       
     </div> 
-       </div>       
+       </form>       
         </div>
     </footer>
         <div class="backdrop is-hidden" data-modal>
@@ -326,7 +326,7 @@
                     <span class="modal-form-desc">Comment</span>
                     <textarea name="user-message" class="modal-form-message" placeholder="Text input"></textarea>
                 </label>
-                <input id="user-policy" type="checkbox" name="user-policy" class="modal-form-check is-hidden" />
+                <input id="user-policy" type="checkbox" name="user-policy" class="modal-form-check visually-hidden" />
                 <label for="user-policy" class="modal-form-check-desc"
                 ><span class="check-box">
                     <svg class="check-icon" width="10" height="8">
