--- a/index.html
+++ b/index.html
@@ -273,17 +273,17 @@
             </li>
         </ul>
         </div>
-       <form class="footer-sub">
+       <div class="footer-sub">
         <h2 class="footer-sub-title">Subscribe</h2>
-        <div class="footer-sub-wrap">
+        <form class="footer-sub-wrap">
             <label class="footer-sub-field">
                 <input class="footer-sub-input" type="email" name="email" placeholder="E-mail" required/>
             </label>
         <button type="submit" class="footer-sub-btn">Subscribe <svg class="footer-sub-icon" width="20" height="24">
             <use href="./img/icons.svg#icon-Frame-3"></use>
         </svg></button>       
-    </div> 
-       </form>       
+    </form> 
+       </div>       
         </div>
     </footer>
         <div class="backdrop is-hidden" data-modal>
